--- a/flash_chat_app/pubspec.yaml
+++ b/flash_chat_app/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  animated_text_kit: ^4.2.1
+  firebase_core: ^1.17.0
+  firebase_auth: ^3.3.18
+  cloud_firestore: ^3.1.15
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
